# NES-emulator

./: .gitignore  CMakeLists.txt  main.cpp  requirements.txt
cpu/: cpu.cpp  cpu.h  utils.cpp
cpu/instructions/: arithmetic.cpp  branch.cpp  control.cpp  increment.cpp  jump.cpp  load.cpp  logical.cpp  shift.cpp  stack.cpp  system.cpp  transfer.cpp
nes/: nes.h
scripts/: opcode_table.py  run_nes_test.bat  test_generate.py
src/apu/: apu.h
src/bus/: Bus.hpp  bus.hpp
src/cartridge/: cartridge.hpp
src/cpu/: cpu.cpp  cpu.h  enum.hpp  utils.cpp
src/cpu/instructions/: arithmetic.cpp  branch.cpp  increment.cpp  jump.cpp  load.cpp  logical.cpp  shift.cpp  stack.cpp  system.cpp  transfer.cpp
src/cpu/tests/: instruction_arithmetic.cpp  instruction_shift.cpp
src/nes/: nes.h
src/ppu/: enums.hpp  ppu.h
